force-app/main/default/objects/Customer_Onboarding__c/Customer_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Lightweight onboarding checklist after customer approval. Checklist areas are DEMO placeholders to validate with Apex.</description>
    <label>Customer Onboarding</label>
    <nameField>
        <displayFormat>ONB-{0000}</displayFormat>
        <label>Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>