force-app/main/default/objects/Customer_Onboarding__c/fields/Company_Information_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Information_Status__c</fullName>
    <label>Company Information Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>