force-app/main/default/objects/Customer_Onboarding__c/fields/Completion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent__c</fullName>
    <formula>(IF(OR(ISPICKVAL(Company_Information_Status__c, "Complete"), ISPICKVAL(Company_Information_Status__c, "Not Required")), 1, 0) + IF(OR(ISPICKVAL(Finance_Status__c, "Complete"), ISPICKVAL(Finance_Status__c, "Not Required")), 1, 0) + IF(OR(ISPICKVAL(Quality_Status__c, "Complete"), ISPICKVAL(Quality_Status__c, "Not Required")), 1, 0) + IF(OR(ISPICKVAL(Logistics_Status__c, "Complete"), ISPICKVAL(Logistics_Status__c, "Not Required")), 1, 0) + IF(OR(ISPICKVAL(Compliance_Status__c, "Complete"), ISPICKVAL(Compliance_Status__c, "Not Required")), 1, 0)) / 5 * 100</formula>
    <label>Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>