force-app/main/default/objects/Customer_Onboarding__c/fields/Finance_Owner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Owner__c</fullName>
    <label>Finance Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Admin</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
                <default>true</default>
                <label>Finance</label>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>