force-app/main/default/objects/Customer_Onboarding__c/fields/Finance_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Status__c</fullName>
    <label>Finance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>