force-app/main/default/objects/Customer_Onboarding__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Copied from the opportunity.</inlineHelpText>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Onboardings</relationshipLabel>
    <relationshipName>Lead_Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>