force-app/main/default/objects/Customer_Onboarding__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>DEMO / TO VALIDATE: exact statutory documents per checklist area are to be confirmed by Apex.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>