force-app/main/default/objects/Customer_Onboarding__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Onboardings</relationshipLabel>
    <relationshipName>Customer_Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>