force-app/main/default/objects/Customer_Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Completion_Percent__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Onboardings</label>
</ListView>