force-app/main/default/objects/Customer_Onboarding__c/listViews/Open_Onboardings.listView-meta.xml
<ListView>
    <fullName>Open_Onboardings</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Completion_Percent__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Open Onboardings</label>
</ListView>